[package]
name = "p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
text_io = "0.1.12"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.1"
rand = "0.8.5"
